--- a/backend/package.json
+++ b/backend/package.json
@@ -26,5 +26,10 @@
     "react-dom": "^16.14.0",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.9",
+    "typescript": "^5.5.2"
   }
 }
